<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <group android:id="@+id/function_group" >
        <item
            android:id="@+id/comment"
            android:title="评论"/>
        <item
            android:id="@+id/share"
            android:title="分享"/>
        
        <item android:title="字体"
            android:id="@+id/font">
            <menu>
                <group android:checkableBehavior="single" >
                    <item
                        android:id="@+id/big"
                        android:title="@string/big"/>
                    <item
                        android:id="@+id/mid"
                        android:title="@string/mid"/>
                    <item
                        android:id="@+id/small"
                        android:title="@string/small"/>
                </group>
            </menu>
        </item>
        <item
            android:id="@+id/collect"
            android:title="收藏"/>
        <item
            android:id="@+id/collected"
            android:title="取消收藏"
            android:visible="false"/>
        <item
            android:id="@+id/full"
            android:title="双击全屏"
            />
         <item
            android:id="@+id/unfull"
            android:title="关闭双击全屏"
            android:visible="false"/>
        <item
            android:id="@+id/move"
            android:title="滑动翻页"
            />
        <item
            android:id="@+id/unmove"
            android:title="关闭滑动翻页"
            android:visible="false"
            />
    </group>

</menu>