<?xml version="1.0" encoding="utf-8"?>
<com.ifeng.news2.widget.RelativeLayoutWithFlingDetector xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/account_bind_wrapper"
    style="@style/fill_both_size"
    android:background="@color/white"
    android:orientation="vertical" >

    <!-- 顶部模块 -->

    <RelativeLayout
        android:id="@+id/font_size_title_bar"
        style="@style/account_title_item_background"
        android:layout_alignParentTop="true" >

        <TextView
            style="@style/auto_size"
            android:layout_centerInParent="true"
            android:text="@string/font_size_setting"
            android:textColor="@color/title_color"
            android:textSize="20sp" />
    </RelativeLayout>
    
    <View
        android:id="@+id/divideLine"
        style="@style/view_title_divide_line_style"
        android:layout_below="@id/font_size_title_bar"
         />

    <LinearLayout
        style="@style/fillh_auto_size"
        android:layout_below="@id/divideLine"
        android:orientation="vertical" >

        <!--小号字体 -->

        <RelativeLayout android:id="@+id/font_size_small"  style="@style/font_size_item_background"  >

            <TextView
                style="@style/bind_item_text"
                android:text="@string/font_size_small" />

            <ImageView
                android:id="@+id/font_size_small_img"
                android:visibility="gone"
                style="@style/font_size_item_switch" />
        </RelativeLayout>

        <View style="@style/account_divide_line_style" />
        
        <!--中号字体 -->

        <RelativeLayout android:id="@+id/font_size_middle" style="@style/font_size_item_background" >

            <TextView
                style="@style/bind_item_text"
                android:text="@string/font_size_middle" />

            <ImageView
                android:id="@+id/font_size_middle_img"
                android:visibility="gone"
                style="@style/font_size_item_switch" />
        </RelativeLayout>

        <View style="@style/account_divide_line_style" />
        
        <!--大号字体 -->

        <RelativeLayout android:id="@+id/font_size_big" style="@style/font_size_item_background" >

            <TextView
                style="@style/bind_item_text"
                android:text="@string/font_size_big" />

            <ImageView
                android:id="@+id/font_size_big_img"
                android:visibility="gone"
                style="@style/font_size_item_switch" />
        </RelativeLayout>

        <View style="@style/account_divide_line_style" />
        
        <!--特大号字体 -->

        <RelativeLayout android:id="@+id/font_size_large" style="@style/font_size_item_background" >

            <TextView
                style="@style/bind_item_text"
                android:text="@string/font_size_large" />

            <ImageView
                android:id="@+id/font_size_large_img"
                android:visibility="gone"
                style="@style/font_size_item_switch" />
        </RelativeLayout>
        
         <View style="@style/account_divide_line_style" />

    </LinearLayout>

    <com.ifeng.news2.widget.IfengBottom
        android:id="@+id/ifeng_bottom"
        style="@style/fillh_auto_size"
        android:layout_alignParentBottom="true" />

    <LinearLayout
        android:id="@+id/shadow"
        style="@style/fillh_auto_size"
        android:layout_above="@id/ifeng_bottom"
        android:background="@drawable/detail_tabbar_shadow"
        android:orientation="horizontal" />

</com.ifeng.news2.widget.RelativeLayoutWithFlingDetector>