<?xml version="1.0" encoding="utf-8"?>
<com.ifeng.news2.widget.RelativeLayoutWithFlingDetector xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/account_bind_wrapper"
    style="@style/fill_both_size"
    android:background="@color/white"
    android:orientation="vertical" >

    <!-- 顶部模块 -->

    <RelativeLayout
        android:id="@+id/account_title_bar"
       	style="@style/account_item_background"
        android:layout_alignParentTop="true" >

        <TextView
            style="@style/auto_size"
            android:layout_centerInParent="true"
            android:text="@string/account_bound"
            android:textColor="@color/title_color"
            android:textSize="20sp" />
    </RelativeLayout>

    <View
        android:id="@+id/divideLine"
        style="@style/view_title_divide_line_style"
        android:layout_below="@id/account_title_bar"
        />

    <LinearLayout
        style="@style/fillh_auto_size"
        android:layout_below="@id/divideLine"
        android:orientation="vertical" >

        <!-- 新浪微博 -->

        <RelativeLayout 
            style="@style/account_item_background" >

            <TextView
                style="@style/bind_item_text"
                android:text="@string/weibo_share" />

            <CheckBox
                android:id="@+id/switch_sina_bind"
                style="@style/account_item_switch" />
        </RelativeLayout>

        <View style="@style/account_divide_line_style" />

        <!-- 腾讯微博 -->

        <RelativeLayout style="@style/account_item_background" >

            <TextView
                style="@style/bind_item_text"
                android:text="@string/tenqt_share" />

            <CheckBox
                android:id="@+id/switch_tencent_bind"
                style="@style/account_item_switch" />
        </RelativeLayout>

        <View style="@style/account_divide_line_style" />

        <!-- QQ空间 -->

        <RelativeLayout style="@style/account_item_background" >

            <TextView
                style="@style/bind_item_text"
                android:text="@string/tenqz_share" />

            <CheckBox
                android:id="@+id/switch_qq_bind"
                style="@style/account_item_switch" />
        </RelativeLayout>

        <View style="@style/account_divide_line_style" />
    </LinearLayout>

    <com.ifeng.news2.widget.IfengBottom
        android:id="@+id/ifeng_bottom"
        style="@style/fillh_auto_size"
        android:layout_alignParentBottom="true" />

    <LinearLayout
        android:id="@+id/shadow"
        style="@style/fillh_auto_size"
        android:layout_above="@id/ifeng_bottom"
        android:background="@drawable/detail_tabbar_shadow"
        android:orientation="horizontal" />

</com.ifeng.news2.widget.RelativeLayoutWithFlingDetector>