<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/fill_both_size"
    android:background="@color/setting_background"
    android:orientation="vertical" >

    <!-- 顶部模块 -->

    <RelativeLayout
        android:id="@+id/setting_title_bar"
        style="@style/setting_item_background"
        android:layout_height="55dp"
        android:layout_marginRight="0dp" >

        <TextView
            style="@style/auto_size"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/my_application"
            android:textColor="@color/setting_title_color"
            android:textSize="21sp" />

        <ImageView
            android:id="@+id/settingButton"
            style="@style/fillv_auto_size"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:paddingRight="10dp"
            android:src="@drawable/settingbutton" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:layout_margin="0dp"
        android:background="#193a56" />

    <com.ifeng.news2.widget.ScrollerViewWithFlingDetector
        android:id="@+id/scrollerView"
        style="@style/fillh_auto_size" >

        <LinearLayout
            style="@style/fillh_auto_size"
            android:orientation="vertical" >

            <!-- 中间模块 -->

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="91dp"
                android:orientation="horizontal" >

                <!-- 天气板块 -->

                <RelativeLayout style="@style/setting_top_container" >

                    <include
                        android:id="@+id/weather_layout"
                        style="@style/auto_size"
                        android:layout_centerInParent="true"
                        layout="@layout/weather_model" />
                </RelativeLayout>

                <View style="@style/view_divide_line_verticle_style" />

                <!-- 凤凰快讯板块 -->

                <RelativeLayout
                    android:id="@+id/history_model"
                    style="@style/setting_top_container" >

                    <TextView
                        style="@style/setting_top_container_text"
                        android:layout_centerInParent="true"
                        android:drawableTop="@drawable/setting_history_background"
                        android:text="@string/history" />
                </RelativeLayout>

                <View style="@style/view_divide_line_verticle_style" />

                <!-- 我的收藏板块 -->

                <RelativeLayout
                    android:id="@+id/collection_model"
                    style="@style/setting_top_container" >

                    <TextView
                        style="@style/setting_top_container_text"
                        android:layout_centerInParent="true"
                        android:drawableTop="@drawable/setting_collection_background"
                        android:text="@string/my_collection" />
                </RelativeLayout>

                <View style="@style/view_divide_line_verticle_style" />

                <!-- 离线下载板块 -->

                <RelativeLayout style="@style/setting_top_container" >

                    <TextView
                        android:id="@+id/offline_model"
                        style="@style/setting_top_container_text"
                        android:layout_centerInParent="true"
                        android:drawableTop="@drawable/setting_offline_background"
                        android:text="@string/download_offline" />

                    <RelativeLayout
                        android:id="@+id/offline_downLoad"
                        style="@style/fill_both_size"
                        android:background="@color/setting_pressed_color" >

                        <TextView
                            android:id="@+id/percentage"
                            style="@style/auto_size"
                            android:layout_marginTop="16dp"
                            android:layout_centerHorizontal="true"
                            android:text="75%"
                            android:textColor="@color/setting_title_color"
                            android:textSize="30sp"
                            android:typeface="sans" />

                        <TextView
                            android:id="@+id/offling_txt"
                            style="@style/auto_size"
                            android:layout_below="@id/percentage"
                            android:layout_centerHorizontal="true"
                            android:paddingLeft="10dp"
                            android:paddingRight="10dp"
                            android:text="@string/offlin_download_txt"
                            android:textColor="@color/setting_title_color"
                            android:textSize="12sp" />

                        <ImageView
                            android:id="@+id/cancel_offline"
                            android:layout_width="22dp"
                            android:layout_height="22dp"
                            android:layout_alignParentRight="true"
                            android:layout_alignParentTop="true"
                            android:paddingRight="3dp"
                            android:paddingTop="3dp"
                            android:src="@drawable/setting_cancel_offline" />
                    </RelativeLayout>
                </RelativeLayout>
            </LinearLayout>

            <View
                style="@style/view_divide_line_style"
                android:layout_margin="0dp" />
            <!-- 底部模块 -->

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginLeft="18dp"
                android:layout_marginRight="18dp" >

                <TextView
                    style="@style/auto_size"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentLeft="true"
                    android:layout_marginBottom="15dp"
                    android:text="@string/setting"
                    android:textColor="@color/setting_title_color"
                    android:textSize="20sp" />
            </RelativeLayout>

            <View style="@style/view_divide_line_style" />
            
            

            <!-- 账号绑定 -->

            <RelativeLayout
                android:id="@+id/bind"
                style="@style/setting_item_background" >

                <TextView
                    style="@style/setting_item_text"
                    android:drawableLeft="@drawable/setting_bind"
                    android:text="@string/account_bound" />

                <ImageView
                    style="@style/auto_size"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/setting_more" />
            </RelativeLayout>

            <View style="@style/view_divide_line_style" />

            <!-- 字号设置 -->

            <RelativeLayout 
                android:id="@+id/font_size"
                style="@style/setting_item_background" >

                <TextView
                    style="@style/setting_item_text"
                    android:drawableLeft="@drawable/setting_font_size"
                    android:text="@string/font_size" />

                <ImageView
                    style="@style/auto_size"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/setting_more" />
            </RelativeLayout>

            <View style="@style/view_divide_line_style" />

            <!-- 2G/3G无图模式 -->

            <RelativeLayout style="@style/setting_item_background" >

                <TextView
                    style="@style/setting_item_text"
                    android:drawableLeft="@drawable/setting_no_photo"
                    android:text="@string/load_image" />

                <CheckBox
                    android:id="@+id/switch_no_photo"
                    style="@style/setting_item_switch" />
            </RelativeLayout>

            <View style="@style/view_divide_line_style" />

            <!-- 新闻推送 -->

            <RelativeLayout style="@style/setting_item_background" >

                <TextView
                    style="@style/setting_item_text"
                    android:drawableLeft="@drawable/setting_news_push"
                    android:text="@string/push_news" />

                <CheckBox
                    android:id="@+id/switch_push"
                    style="@style/setting_item_switch" />
            </RelativeLayout>

            <View style="@style/view_divide_line_style" />

            <!-- 夜间免打扰 -->

            <RelativeLayout style="@style/setting_item_background" >

                <TextView
                    android:id="@+id/non_disturb_msg"
                    style="@style/setting_item_text"
                    android:drawableLeft="@drawable/setting_non_disturb"
                    android:text="@string/non_disturbance" />

                <CheckBox
                    android:id="@+id/switch_non_disturb"
                    style="@style/setting_item_switch" />
            </RelativeLayout>

            <View style="@style/view_divide_line_style" />

            <!-- 清除缓存 -->

            <RelativeLayout
                android:id="@+id/clear_cache"
                style="@style/setting_item_background" >

                <TextView
                    android:id="@+id/clear_cache_text"
                    style="@style/setting_item_text"
                    android:drawableLeft="@drawable/setting_delete"
                    android:text="@string/clear_cache" />

                <ProgressBar
                    android:id="@+id/cache_pb"
                    style="@style/setting_progress_bar"
                    android:layout_width="100dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@id/clear_cache_text"
                    android:max="100"
                    android:progress="50" />

                <TextView
                    android:id="@+id/cache"
                    style="@style/auto_size"
                    android:layout_alignParentRight="true"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="5dp"
                    android:text="24M"
                    android:textColor="@color/setting_small_title_color"
                    android:textSize="12sp" />
            </RelativeLayout>

            <View style="@style/view_divide_line_style" />

            <!-- 意见反馈 -->

            <RelativeLayout
                android:id="@+id/feedback"
                style="@style/setting_item_background" >

                <TextView
                    style="@style/setting_item_text"
                    android:drawableLeft="@drawable/setting_comments"
                    android:text="@string/idea" />
            </RelativeLayout>

            <View style="@style/view_divide_line_style" />

            <!-- 检查新版本 -->
            <RelativeLayout
                android:id="@+id/check_edition"
                style="@style/setting_item_background" >

                <LinearLayout
                    style="@style/auto_size"
                    android:layout_centerVertical="true"
                    android:gravity="center_vertical"
                    android:orientation="horizontal" >

                    <ImageView
                        android:layout_marginLeft="5dp"
                        android:id="@+id/check_icon"
                        android:background="@drawable/setting_check_edition"
                        style="@style/auto_size" />

                    <com.ifeng.news2.widget.GifView
                        android:id="@+id/loading_gif"
                        style="@style/auto_size"
                        android:background="@drawable/upgrade_loading"
                        android:visibility="gone" >
                    </com.ifeng.news2.widget.GifView>

                    <TextView
                        android:id="@+id/check_title"
                        style="@style/setting_item_text"
                        android:paddingLeft="5dip"
                        android:text="@string/check_edition" />
                </LinearLayout>

                <TextView
                    android:id="@+id/current_edition"
                    style="@style/auto_size"
                    android:layout_alignParentRight="true"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="5dp"
                    android:text="当前版本4.1.0"
                    android:textColor="@color/setting_small_title_color"
                    android:textSize="12sp" />
            </RelativeLayout>

        </LinearLayout>
    </com.ifeng.news2.widget.ScrollerViewWithFlingDetector>

</LinearLayout>